--- a/style.css
+++ b/style.css
@@ -8,7 +8,11 @@
 
 body {
 	--main-bg-color: #ddcaaa;
-	background-color: var(--main-bg-color);
+	background-color: var(--main-bg-color);	
+	background-image: url("./images/img_floor.png");
+	background-repeat: repeat;
+	background-position: top left;
+	background-size: 700px;
 }
 /* 
 img {
@@ -17,39 +21,47 @@ img {
     -ms-interpolation-mode: bicubic
 }
  */
+hr {
+	/*width: 960px;*/
+	margin: auto;
+	border-style: dashed;
+	border-width: 0.5px;
+}
 
 h2 {
+	
 	font-family: "Annie Use Your Telescope", Arial, serif;
-	font-size: 1.8em;
+	font-size: 1.3em;
 	}
+
+h3 {
+	
+	font-family: "Annie Use Your Telescope", Arial, serif;
+	font-size: 1.1em;
+	margin:-5px 0 10px 0;
+}
 
 .section-header {
 	background-image: url("./images/img_banner2.png");
 	/* background-image: url("./images/swing.gif"); */
-	height: 650px;
+	height: 400px;
 	background-size: cover;
 	background-repeat: no-repeat;
-    background-position: center bottom;
-    /* background-attachment: fixed; */
+    background-position: bottom center;
     display: flex;
 	justify-content: center;
 	}
 
-@media only screen and (min-width: 960px) {
-	.section-header { background-attachment: fixed;}
-}
-
 .header-logo img {
-	/* border: 1px solid red; */
-	width: 300px;
+	width: 200px;
 	display: flex;
 	justify-content: center;
-	margin: 30px;
+	margin: 20px;
 }
 
 .section-download {
 	/* background-color: var(--main-bg-color); */
-	padding: 50px;
+	padding: 30px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -61,69 +73,52 @@ h2 {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	text-shadow: rgba(5, 6, 6, .30)0 0 10px;
 	}
 
-.download-button {
-	max-width: 100%;
-	border-radius: 15px;
-	box-shadow: rgba(5, 6, 6, .50)0 0 15px;
-	margin: 10px 0;
-	}
-
-.section-trailer {
-	background: url("./images/img_trailer_bg.png") no-repeat center center;
-  	background-size: cover;
-  	position: relative;
-  	padding:0;
-  	text-align: center;
-  	overflow: hidden;
-	max-width: 100%;
-	}
-
-.section-trailer iframe{
-	width: 796px;
-	height: 448px;
-	margin: 40px 0;
-	box-shadow: rgba(5, 6, 6, .75)0 0 40px;
-}
-
-@media screen and (max-width: 64em) {
-    .section-trailer iframe {
-        width: 90%;
-        margin: 30px 0;
-    }
-}
-@media screen and (max-width: 40em) {
-    .section-trailer iframe {
-       	height: 70%;
-       	margin: 20px 0;
-    }
-}
-
-.section-features {
-
-	/* background-color: var(--main-bg-color); */
-	padding-top: 40px;
+.download-button{
+	max-width: 60%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	border-radius: 15px;
+	box-shadow: rgba(5, 6, 6, .50)0 0 15px;
+	margin-bottom: 10px
+	}
+	
+.download-button img {
+	max-width: 100%;
+	}
+
+.section-trailer {
+	background: url("./images/img_trailer_bg.png") no-repeat bottom center;
+  	background-size: cover;
+  	display:flex;
+	justify-content: center;
+	max-width: 100%;
+	}
+
+iframe{
+	width:300px;
+	height: 169px;
+	margin: 20px 0;
+	box-shadow: rgba(5, 6, 6, .75)0 0 20px;
+}
+
+.section-features {
+	padding-top: 40px;
 	max-width: 100%;
 }
 
 .features-container {
-/* 
-border: 1px solid red;	/* debug */
 	display: flex;
-	justify-content: space-around; 
+	flex-direction: column;
 	align-items: center;
-	max-width: 800px;
 	}
 
 .its-cute {
-	max-width: 50%;
-	margin-right: 10px;
-	display: flex;
-	align-items: center;
+	max-width: 70%;
+	margin: 0 0 10px 0;
 }
 
 .its-cute img {
@@ -131,16 +126,21 @@ border: 1px solid red;	/* debug */
 	}
 
 .features {
-	max-width: 50%;
-	margin-left: 10px;
+	max-width: 90%;
+	margin: 0 20px 0 35px;
 	}
 
 .bullet-list {
-	font-size: 1.2em;
-	line-height: 1.6em;
+	font-size: 1.1em;
+	line-height: 1.5em;
 	list-style-type: square;
 	font-family: "quicksandregular","Helvetica Neue",Helvetica,sans-serif;
 	}
+
+.bullet-list li {
+	margin: 10px 0;
+}
+
 
 .section-screenshots {
 	/* background-color: var(--main-bg-color); */
@@ -165,6 +165,7 @@ border: 1px solid red;	/* debug */
     -moz-transition: opacity .2s;
     -o-transition: opacity .2s;
     transition: opacity .2s;
+    box-shadow: rgba(5, 6, 6, .50)0 0 15px;
 }
 
 .screenshot img:hover {
@@ -172,7 +173,6 @@ border: 1px solid red;	/* debug */
 	}
 
 .section-awards {
-	/* background-color: var(--main-bg-color); */
 	padding: 30px 10px;
 	max-width: 100%;
 	display: flex;
@@ -181,7 +181,6 @@ border: 1px solid red;	/* debug */
 	}
 	
 .section-quotes {
-	/* background-color: var(--main-bg-color); */
 	padding: 10px;
 	max-width: 100%;
 	display: flex;
@@ -197,26 +196,212 @@ border: 1px solid red;	/* debug */
 	}
 
 .quote {
-/* 	border: 1px solid green; */
+/*border: 1px solid green;*/ 
 	width: 330px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
-	margin: 15px;
+	margin: 10px;
 	
-	font-family: "quicksandregular","Helvetica Neue",Helvetica,sans-serif;
+	font-family: "Annie Use Your Telescope", Arial, serif;
 	font-style: italic;
-	font-size: 1.1em;
+	font-size: 1.05em;
 	}
 
-.quote img:hover, .download-button:hover, .award img:hover {
+.download-button, .quote-img, .award-img, .credit {
  	-webkit-transition:opacity 0.2s;
     -moz-transition:opacity 0.2s;
     -o-transition:opacity 0.2s;
     transition: opacity 0.2s;
+}
+
+.quote-img:hover, .download-button:hover, .award-img:hover, .credit:hover {
 	opacity: 0.7;
 	}
+
+.section-credits { 
+	padding: 20px 10px 0 10px;
+	max-width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align:center;
+}
+
+#student-game, #mentions {
+	font-family: "quicksandregular","Helvetica Neue",Helvetica,sans-serif;
+	font-size: 0.5em;
+	line-height: 0.2em;
+}
+
+#mentions {
+	font-size: 0.4em;
+	line-height: 1.2em;
+}
+
+.credits-container {
+	min-width: 300px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	margin: 10px 10px;
+}
+
+.credit {
+	/* border: 1px solid blue; */
+	margin: 0 5px;
+	height: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.credit img {
+	height:80%;
+	width: auto;
+}
+
+@media only screen and (min-width: 415px) /*and (max-width: 960px)*/
+{
+	hr { width: 640px;}
+	
+	.section-header { 
+	height: 650px;
+	}
+
+	.header-logo img {
+	width: 300px;
+	margin: 40px;
+	}
+
+	h2 {
+	font-size: 1.8em;
+	}
+	h3 {font-size: 1.3em;}
+
+	.section-download {
+	padding: 40px;
+	}
+	
+	iframe {
+		width:400px;
+		height: 225px;
+		margin: 30px 0;
+	}
+	
+	.section-features {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+	.features-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around; 
+	align-items: center;
+	max-width: 90%;
+	}
+
+	.its-cute {
+	max-width: 50%;
+	margin: 0 10px 0 0;
+	display: flex;
+	align-items: center;
+	}
+
+	.its-cute img {
+	max-width: 100%;
+	}
+
+	.features {
+	max-width: 50%;
+	margin: 0 0 0 10px;
+	}
+
+	.bullet-list {
+	font-size: 1.1em;
+	line-height: 1.5em;
+	}
+
+	.section-credits {
+	padding: 20px 100px 0 100px;
+	}
+
+	#student-game, #mentions {
+	font-size: 0.7em;
+	line-height: 0.2em;
+	}
+
+	#mentions {
+	font-size: 0.6em;
+	line-height: 1.2em;
+	}
+
+	.credits-container {
+	min-width: 400px;
+	}
+
+	.credit img {
+	height:90%;
+	width: auto;
+	}
+}
+
+@media only screen and (min-width: 960px)
+{
+	hr { width: 960px;}
+
+	.section-header { 
+	background-attachment: fixed;
+	}
+	
+	.header-logo img {
+	margin: 30px;
+	}
+
+	.section-download {
+	padding: 50px;
+	}
+
+	h3 {display: none;}
+	
+	iframe {
+		width:796px;
+		height: 448px;
+		margin: 40px 0;
+	}
+
+
+	.features-container {
+	max-width: 800px;
+	}
+
+	.bullet-list {
+	font-size: 1.2em;
+	line-height: 1.6em;
+	}
+	
+	.section-credits {
+	padding: 20px 0 0 0;
+	}
+
+	.credits-container {
+	min-width: 500px;
+	}
+
+	.credit {
+	margin: 0 30px;
+	height: 50px;
+	}
+
+	.credit img {
+	height:100%;
+	width: auto;
+}
+}
 
 footer {
 	/* background-color: tan; */
@@ -234,15 +419,14 @@ footer {
 	text-align: center;
 	}
 
-footer a {
+#text-link {
 	text-decoration: none;
 	}
 
-footer a:visited, footer a:link{
+#text-link:visited, #text-link:link{
 	color: black;
 	}
 	
-footer a:visited:hover, footer a:hover {
+#text-link:visited:hover, #text-link:hover {
 	color: #0066cc;
 }
-
