--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+@font-face {
+    font-family: 'Annie Use Your Telescope';
+    src: url('../fonts/annieuseyourtelescope-webfont.woff2') format('woff2'),
+         url('../fonts/annieuseyourtelescope-webfont.woff') format('woff'),
+         url('../fonts/AnnieUseYourTelescope.ttf') format('truetype'),
+    font-weight: normal;
+    font-style: normal;
+}
 
 * { 
 	margin: 0;
