--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     font-family: "Annie Use Your Telescope";
     src: url("fonts/annieuseyourtelescope-webfont.woff2") format("woff2"),
          url("fonts/annieuseyourtelescope-webfont.woff") format("woff"),
-         url("fonts/AnnieUseYourTelescope.ttf") format("truetype");
+         url("fonts/AnnieUseYourTelescope.ttf") format("truetype"),
+         url("fonts/AnnieUseYourTelescope.ttf") format("opentype");
     font-weight: normal;
     font-style: normal;
 }
