--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     height: 100vh;
     overflow-x: hidden;
     overflow-y: scroll;
+    -webkit-overflow-scrolling:touch;
     -webkit-perspective: 800px;
     perspective:800px;
     max-width:100%;
@@ -97,7 +98,6 @@ h4 {
 	}
 
 .header-logo img {
-	/*width: 200px;*/
 	width: 35vh;
 	display: flex;
 	justify-content: center;
@@ -105,8 +105,8 @@ h4 {
 }
 
 .section-download {
-	height:30vh;
-	padding: 30px;
+	height:31vh;
+	padding: 5vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -118,7 +118,7 @@ h4 {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	text-shadow: rgba(5, 6, 6, .30)0 0 10px;
+	text-shadow: rgba(5, 6, 6, .90)0 0 10px;
 	}
 
 .download-button{
