--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ body {
     overflow-x: hidden;
     overflow-y: scroll;
     -webkit-overflow-scrolling:touch;
-    -webkit-perspective: 800px;
-    perspective:800px;
+    /*-webkit-perspective: 800px;
+    perspective:800px;*/
     max-width:100%;
   }
   
@@ -495,6 +495,8 @@ footer {
     height: 100vh;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
+    -webkit-perspective: 800px;
+    perspective:800px;
     z-index:-1;
   }
 
