--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@
 	box-sizing: border-box;
 }
 
+html, body { height= 100.1%;}
+
 body {
 	--main-bg-color: #2d5da4;
 	background-color: var(--main-bg-color);	
@@ -32,7 +34,7 @@ body {
 }
 
 .parallax {
-    height: 150vh;
+    height: 100vh;
     overflow-x: hidden;
     overflow-y: scroll;
     -webkit-overflow-scrolling:touch;
