--- a/style.css
+++ b/style.css
@@ -195,9 +195,17 @@ strong {
 }
 
 .section-awards {
-	margin: 8vh;
+	margin:0 8vw;
 	max-width: 100%;
 	}
+
+.awards-container {
+	flex-wrap: wrap;
+}
+
+.award {
+	margin: 2vw 5vw;
+}
 	
 .section-quotes {
 	padding: 10px;
